Issue #3405153 by Nitin shrivastava, sijumpk, smustgrave, larowlan: Contexual links should never be bold, unless the theme explicitly makes it so
(cherry picked from commit c2021dd2d7b36ff6a944a56ea8f0a027c3f96e2e)

--- a/core/modules/contextual/css/contextual.theme.css
+++ b/core/modules/contextual/css/contextual.theme.css
@@ -97,6 +97,7 @@
   background-color: #fff;
   font-family: sans-serif;
   font-size: small;
+  font-weight: normal;
   line-height: 0.8em;
 }
 .touchevents .contextual-region .contextual .contextual-links a {
